# clinicalagent-bench

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  render.yaml
.github/workflows/: benchmark.yml  ci.yml  publish.yml
dashboard/: package.json  tailwind.config.ts
scenarios/bias_validation/: bias-001.yaml  bias-002.yaml  bias-003.yaml  bias-004.yaml  bias-005.yaml  bias-006.yaml  bias-007.yaml  bias-008.yaml  bias-009.yaml  bias-010.yaml  bias-011.yaml  bias-012.yaml  bias-013.yaml  bias-014.yaml  bias-015.yaml  bias-016.yaml  bias-017.yaml  bias-018.yaml  bias-019.yaml  bias-020.yaml  bias-021.yaml  bias-022.yaml  bias-023.yaml  bias-024.yaml  bias-025.yaml
scenarios/billing/: billing-001.yaml  billing-002.yaml  billing-003.yaml  billing-004.yaml  billing-005.yaml  billing-006.yaml  billing-007.yaml  billing-008.yaml  billing-009.yaml  billing-010.yaml  billing-011.yaml  billing-012.yaml  billing-013.yaml  billing-014.yaml  billing-015.yaml  billing-016.yaml  billing-017.yaml  billing-018.yaml  billing-019.yaml  billing-020.yaml  billing-021.yaml  billing-022.yaml  billing-023.yaml  billing-024.yaml  billing-025.yaml  billing-026.yaml  billing-027.yaml  billing-028.yaml  billing-029.yaml  billing-030.yaml  billing-031.yaml  billing-032.yaml  billing-033.yaml  billing-034.yaml  billing-035.yaml  billing-036.yaml  billing-037.yaml  billing-038.yaml  billing-039.yaml  billing-040.yaml  (+20 more)
scenarios/care_navigation/: nav-001.yaml  nav-002.yaml  nav-003.yaml  nav-004.yaml  nav-005.yaml  nav-006.yaml  nav-007.yaml  nav-008.yaml  nav-009.yaml  nav-010.yaml  nav-011.yaml  nav-012.yaml  nav-013.yaml  nav-014.yaml  nav-015.yaml  nav-016.yaml  nav-017.yaml  nav-018.yaml  nav-019.yaml  nav-020.yaml  nav-021.yaml  nav-022.yaml  nav-023.yaml  nav-024.yaml  nav-025.yaml  nav-026.yaml  nav-027.yaml  nav-028.yaml  nav-029.yaml  nav-030.yaml
scenarios/clinical_reasoning/: clinical-001.yaml  clinical-002.yaml  clinical-003.yaml  clinical-004.yaml  clinical-005.yaml  clinical-006.yaml  clinical-007.yaml  clinical-008.yaml  clinical-009.yaml  clinical-010.yaml  clinical-011.yaml  clinical-012.yaml  clinical-013.yaml  clinical-014.yaml  clinical-015.yaml  clinical-016.yaml  clinical-017.yaml  clinical-018.yaml  clinical-019.yaml  clinical-020.yaml  clinical-021.yaml  clinical-022.yaml  clinical-023.yaml  clinical-024.yaml  clinical-025.yaml  clinical-026.yaml  clinical-027.yaml  clinical-028.yaml  clinical-029.yaml  clinical-030.yaml
scenarios/clinical_trials/: trial-001.yaml  trial-002.yaml  trial-003.yaml  trial-004.yaml  trial-005.yaml  trial-006.yaml  trial-007.yaml  trial-008.yaml  trial-009.yaml  trial-010.yaml  trial-011.yaml  trial-012.yaml  trial-013.yaml  trial-014.yaml  trial-015.yaml  trial-016.yaml  trial-017.yaml  trial-018.yaml  trial-019.yaml  trial-020.yaml  trial-021.yaml  trial-022.yaml  trial-023.yaml  trial-024.yaml  trial-025.yaml
scenarios/documentation/: doc-001.yaml  doc-002.yaml  doc-003.yaml  doc-004.yaml  doc-005.yaml  doc-006.yaml  doc-007.yaml  doc-008.yaml  doc-009.yaml  doc-010.yaml  doc-011.yaml  doc-012.yaml  doc-013.yaml  doc-014.yaml  doc-015.yaml  doc-016.yaml  doc-017.yaml  doc-018.yaml  doc-019.yaml  doc-020.yaml  doc-021.yaml  doc-022.yaml  doc-023.yaml  doc-024.yaml  doc-025.yaml  doc-026.yaml  doc-027.yaml  doc-028.yaml  doc-029.yaml  doc-030.yaml  doc-031.yaml  doc-032.yaml  doc-033.yaml  doc-034.yaml  doc-035.yaml
scenarios/multi_agent/: multi-001.yaml  multi-002.yaml  multi-003.yaml  multi-004.yaml  multi-005.yaml  multi-006.yaml  multi-007.yaml  multi-008.yaml  multi-009.yaml  multi-010.yaml  multi-011.yaml  multi-012.yaml  multi-013.yaml  multi-014.yaml  multi-015.yaml  multi-016.yaml  multi-017.yaml  multi-018.yaml  multi-019.yaml  multi-020.yaml  multi-021.yaml  multi-022.yaml  multi-023.yaml  multi-024.yaml  multi-025.yaml
scripts/: generate_scenarios.py  generate_scenarios_batch2.py  generate_scenarios_batch3.py  generate_scenarios_batch4.py  generate_scenarios_scale.py
tests/: test_agent_harness.py  test_api.py  test_scenario_engine.py  test_scoring_engine.py  test_virtual_env.py
(+210 files in other folders)
